# google-seo-mcp-claude-code

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: blogpost-draft.md  slideshow.html
scripts/: client_probe.py  smoke_test.py
src/google_seo_mcp/: __init__.py  _dep_check.py  auth.py  guardrails.py  security.py  server.py
src/google_seo_mcp/aeo/: __init__.py  ai_bots_robots.py  llms_txt.py
src/google_seo_mcp/crossplatform/: __init__.py  attribution.py  diagnosis.py  health.py  journey.py  matrix.py  multi_property.py
src/google_seo_mcp/crux/: __init__.py  tools.py
src/google_seo_mcp/ga4/: __init__.py  data.py  dates.py  schema.py
src/google_seo_mcp/ga4/tools/: admin.py  intelligence.py  reporting.py
src/google_seo_mcp/gsc/: __init__.py  analytics.py  dates.py
src/google_seo_mcp/gsc/tools/: analytics.py  intelligence.py  sitemaps.py  sites.py
src/google_seo_mcp/history/: __init__.py  tools.py
src/google_seo_mcp/indexing/: __init__.py  tools.py
src/google_seo_mcp/lighthouse/: __init__.py  tools.py
src/google_seo_mcp/logs/: __init__.py  tools.py
src/google_seo_mcp/migration/: __init__.py  cloaking.py  crawl_advanced.py  equity_report.py  hreflang.py  indexation.py  prerender.py  redirects_plan.py  robots_audit.py  schema_parity.py  sitemap_diff.py  tools.py  wayback.py  wp_audit.py
src/google_seo_mcp/resources/: __init__.py  google_algorithm_updates.py
src/google_seo_mcp/schema/: __init__.py  tools.py
src/google_seo_mcp/serp/: __init__.py  tools.py
src/google_seo_mcp/trends/: __init__.py  tools.py
tests/: test_anomalies_edge_cases.py  test_auth.py  test_dates.py  test_ga4_filters.py  test_gsc_analytics.py  test_guardrails.py  test_intelligence_logic.py  test_jsonld_detector.py  test_security.py  test_serialize_response.py  test_server_registration.py  test_stability_fixes.py
